# learn_wgpu

./: .gitignore  Cargo.toml  README.md  build.rs
demo/: index.html
res/: mario.mtl
src/: camera.rs  camera_controller.rs  global.rs  instance.rs  lib.rs  light.rs  light.wgsl  model.rs  resources.rs  shader.wgsl  shader2.wgsl  texture.rs  vertex.rs
src/light/: directional.rs  light.rs  light.wgsl  mod.rs  point.rs  spot.rs
src/shaders/: directionallight_shader.wgsl  multiple_light_shader.wgsl  pointlight_shader.wgsl  spotlight_shader.wgsl
